--- a/public/prototype-working.html
+++ b/public/prototype-working.html
@@ -759,7 +759,7 @@
             <label style="display: block; margin-bottom: 5px; font-weight: 600; font-size: 14px;">订单状态</label>
             <select id="warehouseOrderStatusFilter" onchange="loadWarehouseOrders()" style="padding: 8px 12px; border: 1px solid #e5e7eb; border-radius: 6px; min-width: 150px;">
               <option value="">全部状态</option>
-              <option value="pending">待确认</option>
+              <option value="pending" selected>待确认</option>
               <option value="confirmed">已确认</option>
               <option value="shipped">已发货</option>
               <option value="completed">已完成</option>
